# jar-analyzer

./: .gitignore  CHANGELOG.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.bat  build.py  check-version.bat  clean.bat  clean.py  dfs-sink.json  go.mod  go.sum  maven.xml  package.bat  pom.xml  test-gitleak  vulnerability.yaml
.github/: secret-allowlist.txt  secret-patterns.txt
.github/ISSUE_TEMPLATE/: bug-报告---bug-report.md  feat-功能建议---feature.md
.github/scripts/: secret-scan.sh
.github/workflows/: build-lite.yml  build-python.yml  build.yml  golang.yml  leak.yml  maven.yml  mcp-build.yml  python-check.yml  spring.yml  static.yml  test-spring.yml  test-unit.yml  trufflehog.yml
agent/: package.bat  package.sh  pom.xml
bytecode-viewer/: README.md
class-searcher/: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
doc/: README-advance.md  README-ai.md  README-api.md  README-cli.md  README-el.md  README-en.md  README-note.md  README-others.md  README-screenshot.md  README-sub.md  README-test.md  README-thanks.md  TOMCAT.MD  Y4LANG.MD  index.html
docs/: README.md
github/: main.go
gox/: README.md  env_override.go  go.go  go.mod  main.go  platform.go  toolchain.go
jar-analyzer-rasp/: check-version.bat  pom.xml
lib/: LICENSE  README.md
mcp/: README.md  go.mod  go.sum
mcp-doc/: README.md
n8n-doc/: README.md  jar-analyzer-workflow.json
native/: CMakeLists.txt  jni_console.c  jni_console.h
release/: RELEASE.md  UPDATE-THANKS.md
skills/: README-skill-jar-audit-agent.md  README.md
test/: 2.ser
(+1548 files in other folders)
